--- a/main.html
+++ b/main.html
@@ -11,14 +11,14 @@
 	<table>
 		<thead>
 			<tr>
-				<th>Roll numbers</th>
-				<th>Names</th>
+		<th>Roll numbers</th>
+		<th>Names</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr>
-				<td>1</td>
-				<td>ABC</td>
+			<td>1</td>
+			<td>ABC</td>
 			</tr>
 			<tr>
 				<td>2</td>
@@ -41,7 +41,8 @@
 			</video>				
 		</li>
 		<li>
-			<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+			<audio controls>
+				<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
 			</audio>
 		</li>
 	</ol>
